--- a/3-airbnb-experience-clone/src/index.css
+++ b/3-airbnb-experience-clone/src/index.css
@@ -45,12 +45,10 @@ nav > img {
   margin-bottom: 0px;
 }
 
-section {
-  margin-left: 36px;
-}
-
 .card {
+  position: relative;
   display: flex;
+  flex-grow: 0 0 auto;
   flex-direction: column;
   max-width: 177px;
 }
@@ -82,4 +80,26 @@ section {
   margin-top: 8px;
   font-weight: 300;
   line-height: 13.2px;
+}
+
+.cards--list {
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 20px;
+  overflow: auto;
+}
+
+section {
+  padding: 20px;
+}
+
+.card--badge {
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  background-color: white;
+  padding: 5px 7px;
+  border-radius: 4px;
+  font-weight: bold;
+  color: rgb(61, 61, 61);
 }
