Sorted alignment to display as 550 wide only

--- a/5-travel-journal-solo-project/src/index.css
+++ b/5-travel-journal-solo-project/src/index.css
@@ -7,6 +7,11 @@ body {
   font-family: 'Inter', 'sans-serif';
 }
 
+.container {
+  width: 550px;
+  margin: 0 auto;
+}
+
 nav {
   background-color: #F55A5A;
   color: #FFFFFF;
